--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a download="" href="packages/images/resume-img.jpg" class="button button--flex">
+                            <a download="" href="packages/images/resume-img.jpg.jpeg" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
